Minor changes
RISDEV-4832